# Mila

./: .gitignore  .runsettings  ATTRIBUTIONS.md  ActivationType_8ixx.html  ActivationType_8ixx.js  BinaryOperation_8ixx.html  BinaryOperation_8ixx.js  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ComponentConfig_8ixx.html  ComponentConfig_8ixx.js  Component_8ixx.html  Component_8ixx.js  CompositeModule_8ixx.html  CompositeModule_8ixx.js  ComputeDevice_8ixx.html  ComputePrecision_8ixx.html  ComputePrecision_8ixx.js  ComputeResourceHelpers_8ixx.html  ComputeResourceHelpers_8ixx.js  ComputeResource_8ixx.html  CpuComputeResource_8ixx.html  CpuCrossEntropyOp_8ixx.html  CpuCrossEntropyOp_8ixx.js  CpuDevice_8ixx.html  CpuDevice_8ixx.js  CpuEncoderOp_8ixx.html  CpuEncoderOp_8ixx.js  CpuGeluOp_8ixx.html  CpuGeluOp_8ixx.js  CpuLayerNormOp_8ixx.html  CpuLayerNormOp_8ixx.js  CpuLinearOp_8ixx.html  CpuLinearOp_8ixx.js  CpuMemoryResource_8ixx.html  CpuMemoryResource_8ixx.js  CpuMultiHeadAttentionOp_8ixx.html  CpuMultiHeadAttentionOp_8ixx.js  CpuOperations_8ixx.html  (+2533 more)
Benches/: CMakeLists.txt  layernorm_forward.cu
Experiments/Cuda/DeviceQuery/: CMakeLists.txt  DeviceQuery.cpp
Mila/: Achilles.Software.Mila.targets  CMakeLists.txt  Mila-Core.ixx  Mila.nuspec  Mila.sln  Mila.vcxproj  Mila.vcxproj.filters
Mila/Benches/: CMakeLists.txt  encoder_backward.cu
Mila/Benchmarks/: CMakeLists.txt  README.md
Mila/Benchmarks/GBench/: CMakeLists.txt  gelu_forward_fp32.cpp  linear_forward_fp32.cpp  main.cpp  softmax_forward_fp32.cpp
Mila/Benchmarks/Src/: Benchmark.ixx  BenchmarkDefinitions.ixx  BenchmarkManager.ixx  BinaryModuleBenchmark.ixx  BlockModuleBenchmark.ixx  KernelBenchmark.ixx  ModuleBenchmark.ixx  OperationBenchmark.ixx  main.cpp
Mila/Dev/: README.md  Transformer.ixx
Mila/Dev/Components/: Conv2D.ixx
Mila/Dev/Data/: Gpt2Tokenizer.ixx  Llama3Tokenizer.ixx
Mila/Dev/Gpt2/: BPETokenizer.ixx  BPETrainer.ixx  BPEVocabulary.ixx  BpeVocabularyConfig.ixx
Mila/Dev/Gpt4/: Gpt4Tokenizer.ixx  Gpt4Vocabulary.Config.ixx  Gpt4Vocabulary.ixx
Mila/Dev/Misc/: Glob.ixx
Mila/Dev/Models/: Graph.ixx  Model.ixx
Mila/Dev/Modules/: Conv2D.ixx
Mila/Dev/Reference/: PrecisionConfig.ixx
Mila/Dev/Training/: Model.ixx  ModelConfig.ixx  ModelExporter.ixx  ModelMetadata.ixx  TrainingHistory.ixx
Mila/Docs/: CMakeLists.txt  doxygen-build.sh
Mila/Examples/: CMakeLists.txt
Mila/Examples/Gpt2/: CMakeLists.txt  Gpt2DataLoader.ixx  ModelConfig.ixx
Mila/Examples/LayerNorm/: CMakeLists.txt
Mila/Examples/ScratchPad/: main.cpp
Mila/GBench/: CMakeLists.txt  gelu_forward_fp32.cpp  main.cpp
Mila/Samples/: CMakeLists.txt
Mila/Samples/Bard/: CMakeLists.txt  README.md
Mila/Samples/CharLM/: CMakeLists.txt  README.md
Mila/Samples/CharRnn/: CharRnn.vcxproj  CharRnnModel.ixx
Mila/Samples/Chat/: CMakeLists.txt
Mila/Samples/Chat_Old/: CMakeLists.txt
Mila/Samples/Gpt2/: CMakeLists.txt
Mila/Samples/LayerNorm/: CMakeLists.txt  LayerNormModel.ixx  LayerNormOp.ixx  main.cpp
Mila/Samples/MNIST/: CMakeLists.txt  README.md
Mila/Samples/MilaPackage/: MilaPackage.cpp  packages.config
Mila/Samples/RnnApp/: RnnApp.cpp  RnnAppModel.ixx
Mila/Samples/ScratchPad/: CMakeLists.txt  LayerNorm.cpp  Linear.cpp  Softmax.cpp  main.cpp
Mila/Samples/Viz/: CMakeLists.txt
Mila/Source/: Mila.ixx
Mila/Source/Core/: Core.Version.ixx  Core.ixx  Version.ixx
Mila/Source/Dnn/: Dnn.Model.ixx  Dnn.RnnLinearLayer.ixx  Dnn.RnnModelOptions.ixx  Dnn.StateTensorDescriptor.ixx  Dnn.TensorDescriptor.ixx  Dnn.ixx  DnnDropoutDescriptor.ixx  DnnModel.ixx  DnnModelBuilder.ixx  DnnModelOptions.ixx  DnnRnnDataSetDescriptor.ixx  DnnRnnModel.ixx  DnnRnnOpDescriptor.ixx  Dropout.ixx  Mila-Dnn.ixx  MilaDnn.ixx  NeuralNetType.ixx  RNNOperation.ixx  RnnDataSet.ixx  RnnLayerCollection.ixx  RnnLinearLayer.ixx  RnnModel.ixx  StateTensor.ixx  Tensor.ixx
Mila/Src/: Context.ixx  LoggingManager.ixx  Mila.ixx  TensorSpec.ixx  Version.h.in  Version.ixx
Mila/Src/Core/: RandomGenerator.ixx  rand.h
Mila/Src/Data/: DataLoader.ixx  DataLoaderBase.ixx
Mila/Src/Dnn/: Attributes.ixx  Dnn.ixx  Graph.ixx  Model.ixx  ModelBase.ixx  ModelCallback.ixx  ModelContext.ixx  Module.ixx  Session.ixx  Tensor.ixx  TensorBuffer.cuh  TensorBuffer.ixx  TensorBufferBase.h  TensorBufferOld.cuh  TensorHelpers.ixx  TensorOp.ixx  TensorTraits.ixx  TensorType.ixx
Mila/Src/Helpers/: FileIo.ixx  Memory.ixx
Mila/Src/Misc/: Glob.ixx
Mila/Src/Utils/: DefaultLogger.ixx  Logger.ixx  TrainingLogger.ixx  json.ixx  unistd.h
Mila/Tests/: CMakeLists.txt  Context.cpp  main.cpp
Mila/Tests/Cuda/: CudaDevice.cpp  CudaDeviceHelpers.cpp
Mila/Tests/Cudnn/: Utils.cpp
Mila/Tests/Dataset/: Loader.cpp
Mila/Tests/Dnn/: Model.cpp  Tensor.cpp  TensorBuffer.cpp
Mila/Tools/: CMakeLists.txt
Mila/Tools/Tokenize/: README.md  Tokenize.cpp
Mila/cmake/: MilaConfig.cmake.in
MilaStudio/: CMakeLists.txt  README.md
MilaStudio/Src/: Application.ixx  DocumentView.ixx  Main.cpp  MainWindow.ixx  ModelTreeView.ixx  OutputView.ixx
Samples/MilaApp/: CMakeLists.txt  MilaApp.cpp  MilaApp.h  MilaApp.vcxproj  MilaConfig.h.in
Samples/RNNApp/: CMakeLists.txt  SampleRnnApp.cpp  SampleRnnModel.h
Samples/Rnn/: CMakeLists.txt  RNN_example.cpp  RNN_example.h  init_data.cu  init_data.cuh
Source/: CMakeLists.txt  Mila.cpp  Mila.h  MilaConfig.h.in
Source/Dnn/: DnnModel.h  DnnModelBuilder.h  DnnModelOptions.h  Dropout.h  NeuralNetType.h  RNNDataSet.h  RNNOperation.h  RnnLayerCollection.h  RnnLinearLayer.h  RnnModel.h  RnnModelOptions.h  StateTensor.h  Tensor.h
Source/Dnn/CuDNN/: CudnnContext.h  Descriptor.h  Error.h  Helpers.h  OpaqueDescriptor.h  OpaqueDescriptorType.h  OpaqueHandle.h  Status.h  Utils.h  Version.h  init_data.cu  init_data.h
Source/Dnn/Cuda/: CudaDevice.h  CudaDeviceProps.cpp  CudaDeviceProps.h  CudaEnv.cpp  CudaEnv.h  CudaError.h  CudaHelper.h  CudaMemory.h  CudaProfiler.h  CudaStream.cpp  CudaStream.h  CudaUniqueHandle.h
Tests/: CMakeLists.txt  main.cpp
Tests/Cuda/: Device.cpp
Tests/Dnn/: Common.h  Context.cpp  Dropout.cpp  Tensor.cpp  Utils.cpp
(+3443 files in other folders)
